[build-system]
requires = ["maturin~=1.12.0"]
build-backend = "maturin"

[project]
name = "py-rattler-build"
version = "0.70.0"
requires-python = ">=3.10"
description = "The fastest way to build conda packages programatically"
readme = "README.md"
authors = [{ name = "Wolf Vollprecht", email = "w.vollprecht@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Typing :: Typed",
]
license = "BSD-3-Clause"

[project.urls]
Homepage = "https://github.com/prefix-dev/rattler-build"
Repository = "https://github.com/prefix-dev/rattler-build"
Issues = "https://github.com/prefix-dev/rattler-build/labels/python-bindings"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "rust/Cargo.toml"
module-name = "rattler_build._rattler_build"
python-source = "src"

[tool.ruff]
line-length = 120
target-version = "py310"
lint.extend-select = ["UP"]

# Tutorial notebooks introduce imports inline next to where they are used.
[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src/rattler_build", "tests", "examples"]

[tool.ty.rules]
unresolved-import = "ignore" # Ignore until ty can deal with the Rust shared lib
