[package]
name = "rattler-build-tests"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rattler-build-test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
itertools = "0.12.0"
rattler_package_streaming = { version = "0.14.0", default-features = false }
serde_json = "1.0.108"
sha1 = "0.10.6"
