[package]
name = "rust-tests"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.3"
rattler_package_streaming = { version = "0.23.19", default-features = false }
serde_json = "1.0.145"
sha1 = "0.10.6"
duct = "1.1.1"
fs-err = "3.2.0"
