[package]
name = "rust-tests"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.3"
rattler_package_streaming = { workspace = true, default-features = false }
serde_json = { workspace = true }
sha1 = { workspace = true }
duct = "1.1.1"
fs-err = { workspace = true }
