[package]
name = "rattler_build_docs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Documentation binary used to generate CLI documentation for rattler-build"
publish = false

[dependencies]
clap = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
rattler-build = { path = "../..", features = ["recipe-generation"] }
rattler_conda_types = { workspace = true }
