[package]
name = "rattler_build_jinja"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "minijinja integration for rattler-build"

[features]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
minijinja = { workspace = true }
rattler_build_types = { workspace = true }
rattler_conda_types = { workspace = true, default-features = false }
strum = { workspace = true }
lazy_static = { workspace = true }
indexmap = { workspace = true }
fs-err = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
tempfile = { workspace = true }
anyhow = { workspace = true }
