[package]
name = "rattler_build_networking"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Networking utilities for rattler-build"

[features]
default = []
middleware = ["rattler_networking"]
native-tls = ["reqwest/native-tls", "rattler_networking?/native-tls"]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots",
  "reqwest-middleware/rustls-tls",
  "rattler_networking?/rustls-tls",
]

[dependencies]
reqwest = { workspace = true, features = ["multipart"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rattler_networking = { version = "0.25.16", optional = true, default-features = false }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
