[package]
name = "rattler_build_playground"
version = "0.1.0"
authors = ["rattler-build contributors <hi@prefix.dev>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/prefix-dev/rattler-build"
description = "WASM playground for the rattler-build recipe parser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
rattler_build_recipe = { path = "../rattler_build_recipe", default-features = false, features = ["variant-config"] }
rattler_build_variant_config = { path = "../rattler_build_variant_config" }
rattler_build_jinja = { path = "../rattler_build_jinja" }
rattler_build_types = { path = "../rattler_build_types" }
rattler_build_yaml_parser = { path = "../rattler_build_yaml_parser" }
indexmap = "2"
rattler_conda_types = { version = "0.43", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde_yaml = "0.9"
arborium = { version = "2", default-features = false, features = ["lang-yaml"] }

[profile.release]
opt-level = "s"
