[package]
name = "rattler_build_recipe"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Recipe generation for PyPI, CRAN, CPAN, and LuaRocks packages"

[features]
default = []
miette = ["dep:miette", "dep:thiserror", "dep:pathdiff"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rattler_conda_types = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
minijinja = { workspace = true, features = ["unstable_machinery"] }
marked-yaml = { workspace = true }
miette = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
pathdiff = { workspace = true, optional = true }
url = { workspace = true }
spdx = { workspace = true }
globset = "0.4.16"
fs-err.workspace = true

[dev-dependencies]
insta = { workspace = true }
walkdir = "2"

# Enable miette for tests to demonstrate error messages
[dev-dependencies.miette]
workspace = true
features = ["fancy"]
