[package]
name = "rattler_build_recipe_generator"
version = "0.1.8"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Automatic recipe generation for Python (PyPI), R (CRAN), Perl (CPAN), and Lua (LuaRocks) packages"

[features]
default = ['rustls']
cli = ["dep:clap"]
native-tls = ['reqwest/native-tls']
rustls = ['reqwest/rustls']

[dependencies]
clap = { workspace = true, optional = true }
async-once-cell = { workspace = true }
async-recursion = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
rattler_conda_types = { workspace = true }
rattler_digest = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs-err = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
tokio = { workspace = true }
tracing-test = { workspace = true }
