[package]
name = "rattler_build_source_cache"
version = "0.1.0"
edition = "2021"
authors = ["rattler-build contributors"]
description = "Source cache management for rattler-build"
license = "BSD-3-Clause"
repository = "https://github.com/prefix-dev/rattler-build"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
fs-err = "3.0"
file-lock = "2.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
md-5 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
walkdir = "2.5"
zip = "2.2"
sevenz-rust = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"
indicatif = "0.17"
tempfile = "3"
dunce = "1.0"
rattler_git = { path = "../rattler_git" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
tempfile = "3"
