[package]
name = "rattler_build_source_cache"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Source cache management for rattler-build"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fs-err = { workspace = true }
file-lock = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rattler_build_networking = { path = "../rattler_build_networking" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
zip = { workspace = true }
sevenz-rust2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
bzip2 = { workspace = true }
xz2 = { workspace = true }
zstd = { workspace = true }
indicatif = { workspace = true }
tempfile = { workspace = true }
dunce = { workspace = true }
rattler_git = { path = "../rattler_git" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tempfile.workspace = true
