[package]
name = "rattler_build_source_cache"
version = "0.1.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Source cache management for rattler-build"

[features]
default = ["rustls", "sigstore"]
sigstore = [
  "dep:sigstore-verify",
  "dep:sigstore-trust-root",
  "dep:sigstore-types",
  "sigstore-verify/tuf",
  "sigstore-trust-root/tuf",
]
native-tls = [
  "rattler_build_networking/native-tls",
  "sigstore-verify?/native-tls",
]
rustls = ["rattler_build_networking/rustls", "sigstore-verify?/rustls"]

[dependencies]
async-trait = { workspace = true }
jiff = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
rattler_prefix_guard = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rattler_build_networking = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
zip = { workspace = true }
sevenz-rust2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
bzip2 = { workspace = true }
lzma-rust2 = { workspace = true }
zstd = { workspace = true }
indicatif = { workspace = true }
tempfile = { workspace = true }
dunce = { workspace = true }
rattler_git = { workspace = true }
hex = { workspace = true }
sigstore-verify = { version = "0.8.0", default-features = false, optional = true }
sigstore-trust-root = { version = "0.8.0", default-features = false, optional = true }
sigstore-types = { version = "0.8.0", optional = true }

[dev-dependencies]
base64 = "0.22"
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tempfile.workspace = true
